# FASTUSBasp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODOs.md  build.sh  config.cmake  cross-file.txt  libopencm3.ld  meson.build
.github/: FUNDING.yml
.github/workflows/: build.yml
cmake/: stm32-toolchain.cmake
kicad/: FASTUSBaspAdapter-cache.lib  FASTUSBaspAdapter.kicad_pcb  FASTUSBaspAdapter.net  FASTUSBaspAdapter.pro  FASTUSBaspAdapter.sch
kicad/gerber/: FASTUSBaspAdapter-B.Cu.gbl  FASTUSBaspAdapter-B.Mask.gbs  FASTUSBaspAdapter-B.SilkS.gbo  FASTUSBaspAdapter-Edge.Cuts.gko  FASTUSBaspAdapter-F.Cu.gtl  FASTUSBaspAdapter-F.Mask.gts  FASTUSBaspAdapter-F.SilkS.gto  FASTUSBaspAdapter.drl
kicad2/: FASTUSBaspAdapter-cache.lib  FASTUSBaspAdapter.kicad_pcb  FASTUSBaspAdapter.net  FASTUSBaspAdapter.pro  FASTUSBaspAdapter.sch  configfile  panelized.kicad_pcb  panelizedv02.kicad_pcb
kicad2/gerber/: FASTUSBaspAdapter-B.Cu.gbl  FASTUSBaspAdapter-B.Mask.gbs  FASTUSBaspAdapter-B.SilkS.gbo  FASTUSBaspAdapter-Edge.Cuts.gko  FASTUSBaspAdapter-F.Cu.gtl  FASTUSBaspAdapter-F.Mask.gts  FASTUSBaspAdapter-F.SilkS.gto  FASTUSBaspAdapter.drl
kicad2/pan-gerber/: panelized-B.Cu.gbl  panelized-B.Mask.gbs  panelized-B.SilkS.gbo  panelized-Edge.Cuts.gko  panelized-F.Cu.gtl  panelized-F.Mask.gts  panelized-F.SilkS.gto  panelized.drl  panelizedv02-B.Cu.gbl  panelizedv02-B.Mask.gbs  panelizedv02-B.SilkS.gbo  panelizedv02-Edge.Cuts.gko  panelizedv02-F.Cu.gtl  panelizedv02-F.Mask.gts  panelizedv02-F.SilkS.gto  panelizedv02.drl
kicad3/: FASTUSBaspAdapter-cache.lib  FASTUSBaspAdapter.bak  FASTUSBaspAdapter.kicad_pcb  FASTUSBaspAdapter.net  FASTUSBaspAdapter.sch  configfile-4-rotate  panelizedv02.kicad_pcb
kicad3/gerber/: FASTUSBaspAdapter-B.Cu.gbl  FASTUSBaspAdapter-B.Mask.gbs  FASTUSBaspAdapter-B.SilkS.gbo  FASTUSBaspAdapter-Edge.Cuts.gm1  FASTUSBaspAdapter-F.Cu.gtl  FASTUSBaspAdapter-F.Mask.gts  FASTUSBaspAdapter-F.SilkS.gto  FASTUSBaspAdapter-drl_map.gbr  FASTUSBaspAdapter.drl  panelizedv02.drl
kicad3/pan-gerber/: panelizedv02-B.Cu.gbl  panelizedv02-Edge.Cuts.gko
kicad4/: FASTUSBaspAdapter-cache.lib  FASTUSBaspAdapter.bak  FASTUSBaspAdapter.kicad_pcb  FASTUSBaspAdapter.kicad_pcb-bak  FASTUSBaspAdapter.net  FASTUSBaspAdapter.pro  FASTUSBaspAdapter.sch  configfile
kicad4/gerber/: FASTUSBaspAdapter-B.Cu.gbl  FASTUSBaspAdapter-B.Mask.gbs  FASTUSBaspAdapter-B.SilkS.gbo  FASTUSBaspAdapter-Edge.Cuts.gko  FASTUSBaspAdapter-F.Cu.gtl  FASTUSBaspAdapter-F.Mask.gts  FASTUSBaspAdapter-F.SilkS.gto  FASTUSBaspAdapter.drl
kicad4/pan-gerber/: panelizedv02-B.Mask.gbs  panelizedv02-B.SilkS.gbo  panelizedv02-F.Cu.gtl  panelizedv02-F.Mask.gts  panelizedv02-F.SilkS.gto  panelizedv02.drl
lib/: CMakeLists.txt  delay.cpp  delay.h  fastserial.h  meson.build  pin.cpp  pin.h  queue.h  rcc.cpp  rcc.h  serial.cpp  serial.h  serialcommon.h
lib/dma/: dmabuffer.h  dmabuffer1.h
lib/sleep/: sleep.c  sleep.h
lib/usart1/: usart1.c  usart1.h
lib/usb/: descriptor.h  util.h
pcb/: fastusbasp_v2-cache.lib  fastusbasp_v2-rescue.lib  fastusbasp_v2.kicad_pcb  fastusbasp_v2.net  fastusbasp_v2.pro  fastusbasp_v2.sch  fp-lib-table  sym-lib-table
pcb/customfp.pretty/: Pin_Header_SMD_pads_1x04_pitch2.54mm.kicad_mod
src/: CMakeLists.txt  isp.h  main.cpp
src/fastusbasp/: CMakeLists.txt  TODOs.md  config.h  main.c  spi.c  tpi.c  tpi.h  usbdevice.h
udev/: README.md
udevrules/: fastusbasp.rules
v1/: config.cmake
v1/lib/sleep/: CMakeLists.txt  sleep.h
v1/lib/usart1/: CMakeLists.txt  usart1.c
v1/src/: config.h  spi.h  usbdevice.h
